# webgraph-ans-rs

./: .gitignore  Cargo.toml  README.MD  README.md  percomponent_analysis.py  script.py  script.sh
.github/workflows/: rust.yml
benches/: bench_main.rs  fastdiv.rs
benches/benchmarks/: decoder.rs  encoder.rs  fastdiv.rs  graph_encoding.rs  mod.rs  model4encoder_building.rs  model_for_decoder.rs
examples/: bench_bvgraph.rs  bench_seq_access.rs  bitvec_decoder.rs  compression_effectiveness.rs  decoder.rs  decoder_32bit.rs  experiments.rs  fast_decoder.rs  rank9decoder.rs  rank_as_frame.rs  vec_as_frame.rs  with_vec.rs
src/: lib.rs  utils.rs
src/ans/: ans_util.rs  dec_model.rs  decoder.rs  decoder_model.rs  enc_model.rs  enc_model_builder.rs  encoder.rs  encoder_model.rs  folded_stream_ans_decoder.rs  folded_stream_ans_encoder.rs  mod.rs  model4decoder.rs  model4encoder.rs  model4encoder_builder.rs  traits.rs
src/ans/models/: component_model4decoder.rs  component_model4encoder.rs  mod.rs  model4decoder.rs  model4encoder.rs
src/bvgraph/: mock_writers.rs  mod.rs  random_access.rs  reader.rs  sequential.rs  writer.rs
src/bvgraph/estimators/: entropy_estimator.rs  log2_estimator.rs  mod.rs
src/bvgraph/factories/: bvgraph_decoder_factory.rs  bvgraphseq_decoder_factory.rs  mod.rs
src/bvgraph/writers/: bvgraph_encoder.rs  bvgraph_model_builder.rs  mod.rs
src/multi_model_ans/: decoder.rs  encoder.rs  mod.rs  model4decoder.rs  model4encoder.rs  model4encoder_builder.rs
src/traits/: folding.rs  mod.rs  quasi.rs
src/utils/: ans_utilities.rs  ans_utils.rs  data_utilities.rs  data_utils.rs  mod.rs  rev.rs
tests/: coder_tests.rs  compressor_tests.rs  decoder_model.rs  decoder_model_tests.rs  encoder_model.rs  encoder_model_tests.rs  test_bvgraph.rs
tests/common/: mod.rs
tests/data/cnr-2000/: cnr-2000.ans  cnr-2000.ef  results.phases
tests/utils/: mod.rs
