[package]
name = "folded_streaming_rans"
version = "0.1.0"
edition = "2021"

[profile.release]
debug = true
opt-level = 3

[dependencies]
readonly = "0.2.11"
anyhow = "1.0.75"
sux = { git =  "https://github.com/vigna/sux-rs", branch = "main" }
itertools = "0.12.0"
bitvec = "1.0.1"
sucds = "0.8.1"

[dev-dependencies]
criterion = "0.5.1"
pprof = { version = "0.13.0", features = ["flamegraph", "criterion", "frame-pointer"] }
rand = "0.8.5"
rand_distr = "0.4.3"
rstest = "0.18.2"

[[bench]]
name = "bench_main"
harness = false

[profile.bench]
debug = true



