[package]
name = "webgraph-ans"
version = "0.1.0"
edition = "2021"
description = "Web graphs compression using ANS over BvGraph format."
repository = "https://github.com/ciminilorenzo/webgraph-ans-rs"
readme = "README.md"
keywords = ["graph", "compression", "ans", "entropy-encoding"]
categories = ["compression", "data-structures"]

[profile.release]
debug = true
opt-level = 3

[dependencies]
anyhow = "1.0.75"
sux = "0.4.6"
webgraph = { git = "https://github.com/vigna/webgraph-rs"}
clap = "4.4.16"
stderrlog = "0.6.0"
env_logger = "0.11.5"
tempfile = "3.9.0"
epserde = "0.6.1"
mem_dbg = "0.2.4"
dsi-progress-logger = "0.2.2"
log = "0.4.20"
lender = "0.2.9"
dsi-bitstream = "0.4.0"
mmap-rs = "0.6.1"
itertools = "0.13.0"
rand = "0.8.5"

[dev-dependencies]
criterion = "0.5.1"
pprof = { version = "0.13.0", features = ["flamegraph", "criterion", "frame-pointer"] }
rand_distr = "0.4.3"
rstest = "0.23.0"
core_affinity = "0.8.1"

[[bench]]
name = "bench_main"
harness = false

[profile.bench]
debug = true



